fixing a capitalization mistake, and fixing spacing between borders, had to remove the stylized border

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ body {
     /* placeholders to see sizing, positioning & visualization */
     box-shadow: 80px 80px 80px 80px white inset, 80px 80px 80px 80px rgba(0, 0, 0, .4);
     font-weight: 900;
+    border:solid;
     /* width: 550px; */
     /* box-shadow: inset -4px -4px #adafbc; */
     /* position:relative; left: 345px; top: 5x; */
